testdata/compiler/invalid/duplicate-request-name.pt
req login:
  POST /auth/login

req login:
  GET /auth/me

flow "x":
  login -> login : second
